--- a/views/map.ejs
+++ b/views/map.ejs
@@ -50,8 +50,6 @@
 				cubeGeo = new THREE.BoxGeometry( 50, 50, 50 );
 				cubeMaterial = new THREE.MeshLambertMaterial( { color: 0xfeb74c} );
 
-
-
 				// Lights
 
 				var ambientLight = new THREE.AmbientLight( 0x606060 );
@@ -86,32 +84,19 @@
 
 			}
 
+      // code for drawing minecraft maps
+
 			function addVoxel(x, y, z) {
 				var voxel = new THREE.Mesh( cubeGeo, cubeMaterial );
 				voxel.position.set(x, y, z);
 				scene.add( voxel );
 			}
 
-			function makeColumn(x, z) {
-				var col = {};
-				col.x = x;
-				col.z = z;
-				col.data = [];
-				var number;
-				for (var i = 0; i < 64; i++) {
-					if (i > 32) {number = 0;}
-					else {
-						number = Math.round(Math.random());
-					}
-					col.data.push(number);
-				}
-				return col;
-			}
-
 			function addColumnVoxels(col) {
 				voxelSideLength = 50;
 				var yOffset = 32;
-				for (var i = 0; i < col.data.length; i++) {
+        // lua sends data in a weird format
+				for (var i = 1; i <= col.data.n; i++) {
 					if (col.data[i]) {
 						addVoxel(
 							col.x * voxelSideLength,
@@ -122,13 +107,30 @@
 				}
 			}
 
-			for (var x = -10; x <= 10; x++) {
-				for (var z = -10; z <= 10; z++) {
-					addColumnVoxels(makeColumn(x, z));
-				}
-			}
+      // reaaaaally simple camera controls
+      function keyPressHandler(e) {
+        var keyCode = e.which;
+        console.log(keyCode);
+        // w
+        if (keyCode == 119) {
+          camera.translateY(-50);
+          render();
+        }
+        // s
+        if (keyCode == 115) {
+          camera.translateY(50);
+          render();
+        }
+      }
 
-			setInterval(render, 100);
+      document.addEventListener('keypress', keyPressHandler);
+
+      // add the map data to the scene
+      for (var col of map) {
+        addColumnVoxels(col);
+      }
+
+      render();
 
 		</script>
 
