Camera controls starting to come together

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -19,6 +19,7 @@
 	<body>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r81/three.min.js"></script>
+		<script src="/js/PointerLockControls.js"></script>
 		<!-- <script src="/js/three.js-master/build/three.js"></script> -->
 
 		<script>
@@ -27,6 +28,7 @@
 
 			var container;
 			var camera, scene, renderer;
+			var controls;
 			var cube;
 
 			var cubeGeo, cubeMaterial;
@@ -44,6 +46,10 @@
 				camera.lookAt( new THREE.Vector3() );
 
 				scene = new THREE.Scene();
+
+				// controls
+				controls = new PointerLockControls(camera);
+				scene.add(controls.getObject());
 
 				// cubes
 
@@ -79,9 +85,8 @@
 			}
 
 			function render() {
-
+				controls.update();
 				renderer.render( scene, camera );
-
 			}
 
       // code for drawing minecraft maps
@@ -107,30 +112,41 @@
 				}
 			}
 
-      // reaaaaally simple camera controls
-      function keyPressHandler(e) {
-        var keyCode = e.which;
-        console.log(keyCode);
-        // w
-        if (keyCode == 119) {
-          camera.translateY(-50);
-          render();
-        }
-        // s
-        if (keyCode == 115) {
-          camera.translateY(50);
-          render();
-        }
-      }
+			// locking/unlocking the cursor, enabling/disabling controls
+			var havePointerLock = 'pointerLockElement' in document;
 
-      document.addEventListener('keypress', keyPressHandler);
+			if (havePointerLock) {
+
+				var element = document.body;
+
+				function pointerLockChangeCB(event) {
+					if (document.pointerLockElement === element) {controls.enabled = true;}
+					else {controls.enabled = false;}
+				}
+
+				// Hook pointer lock state change events
+				document.addEventListener( 'pointerlockchange', pointerLockChangeCB, false );
+				document.addEventListener( 'pointerlockerror', console.dir, false );
+
+				element.addEventListener('click', function(event) {
+					element.requestPointerLock();
+				}, false);
+
+			}
+			else {alert('Your browser doesn\'t seem to support Pointer Lock API');}
+
+
 
       // add the map data to the scene
+			// should probably be in init
+			addVoxel(0, 0, 0);
       for (var col of map) {
         addColumnVoxels(col);
       }
 
-      render();
+			render();
+			// after the first time, render only while controls are active
+      setInterval(function() {controls.enabled ? render() : false}, 100);
 
 		</script>
 
