--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,11 @@
     <meta charset='UTF-8'>
     <title>Roboserver!</title>
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
+
     <input type='text' id='commandInput'></input>
-    <script type='text/javascript' src='/js/fetchPromise.js'></script>
     <script type='text/javascript' src='/js/interface.js'></script>
   </body>
 </html>
