--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,3 +3,34 @@ body {
   margin: 0px;
   overflow: hidden;
 }
+
+input {
+  margin: 1px;
+}
+
+.message {
+  font-size: 14px;
+  display: inline-block;
+  padding: 8px;
+  border-radius: 25px;
+  margin: 1px;
+  color: #FFFFFF
+}
+
+.input {
+  border-color: #424242;
+  background-color: #A3A3A3;
+
+}
+
+.output {
+  border-color: #424242;
+  background-color: #767676;
+}
+
+#messageContainer {
+  position: fixed;
+  top: 99%;
+  left: 1%;
+  transform:translateY(-100%);
+}
