Updated hardness map to reflect the natural environment better

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,8 @@
       <input type='text' id='commandInput'></input>
     </div>
 
+    <div id='buttonContainer'></div>
+
     <script type='text/javascript' src='/js/interface.js'></script>
 
     <script src="/js/three.js-master/build/three.js"></script>
