--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,8 @@ body {
   overflow: hidden;
 }
 
+/* message display styles */
+
 input {
   margin: 1px;
 }
@@ -33,4 +35,10 @@ input {
   top: 99%;
   left: 1%;
   transform:translateY(-100%);
+}
+
+/* button display styles */
+
+#buttonContainer {
+
 }
