--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,8 +17,8 @@
 
     <script type='text/javascript' src='/js/interface.js'></script>
 
-    <script src="/js/three.js-master/build/three.js"></script>
-		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r81/three.min.js"></script> -->
+    <!-- <script src="/js/three.js-master/build/three.js"></script> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r81/three.min.js"></script>
 		<script src="/js/PointerLockControls.js"></script>
 		<script src="/js/map.js"></script>
 
