--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,6 @@
   <head>
     <meta charset='UTF-8'>
     <title>Roboserver!</title>
-    <!-- <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script> -->
     <script src="http://localhost:3000/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="/css/style.css">
   </head>
@@ -17,10 +16,11 @@
 
     <script type='text/javascript' src='/js/interface.js'></script>
 
-    <!-- <script src="/js/three.js-master/build/three.js"></script> -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r81/three.min.js"></script>
+    <script src="/js/three.js-master/build/three.js"></script>
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r81/three.min.js"></script> -->
 		<script src="/js/PointerLockControls.js"></script>
 		<script src="/js/map.js"></script>
+		<script src="/js/buttons.js"></script>
 
   </body>
 </html>
