Small improvements to renderer and commandloop

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,7 +40,8 @@ input {
 /* button display styles */
 
 #buttonContainer {
-  float: right;
+  position: absolute;
+  right: 0%;
 }
 
 #buttonContainer > button {
