added socket.io.js to server files to avoid domain name import weirdness

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset='UTF-8'>
     <title>Roboserver!</title>
-    <script src="http://dunstad.ddns.net/socket.io/socket.io.js"></script>
+    <script src="/js/socket.io.js"></script>
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
