added checkbox to set whether a command will be run in lua or the os terminal

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,8 @@
   <body>
 
     <div id='messageContainer'>
-      <input type='text' id='commandInput'></input>
+      <input type='text' id='commandInput'></input><br>
+      <input type='checkbox' id='runInTerminal'></input>Run in Terminal
     </div>
 
     <div id='buttonContainer'></div>
