--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,9 @@ input {
 .input {
   border-color: #424242;
   background-color: #A3A3A3;
-
+}
+.input:hover {
+  background-color: #C3C3C3;
 }
 
 .output {
