added scan toggle checkbox, but it does nothing yet

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,9 @@
       <input type='checkbox' id='runInTerminal'></input>Run in Terminal
     </div>
 
-    <div id='buttonContainer'></div>
+    <div id='buttonContainer'>
+      <input type='checkbox' id='scanWhileMoving' checked></input>Scan While Moving
+    </div>
 
     <script type='text/javascript' src='/js/interface.js'></script>
 
