fixed scan level select

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,11 +14,11 @@
     </div>
 
     <div id='buttonContainer'>
-      <input type='select' id='scanWhileMoving'>
+      <select id='scanWhileMoving'>
         <option value='0'>None</option>
         <option value='1'>Small</option>
         <option value='2'>Big</option>
-      </input>Scan While Moving
+      </select>Scan While Moving
     </div>
 
     <script type='text/javascript' src='/js/interface.js'></script>
