added up and down scans for small mode

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,11 +14,12 @@
     </div>
 
     <div id='buttonContainer'>
+      Scan Level:
       <select id='scanWhileMoving'>
         <option value='0'>None</option>
         <option value='1'>Small</option>
         <option value='2'>Big</option>
-      </select>Scan While Moving
+      </select>
     </div>
 
     <script type='text/javascript' src='/js/interface.js'></script>
