--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
     </div>
 
     <div id='buttonContainer'>
+      <div id='hoverGuideCoordinates'></div>
       Scan Level:
       <select id='scanWhileMoving'>
         <option value='0'>None</option>
