--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,6 +40,7 @@
 		<script src="/js/voxelMap.js"></script>
 		<script src="/js/map.js"></script>
 		<script src="/js/buttons.js"></script>
+		<script src="/js/jquery-3.1.1.min.js"></script>
 		<script src="/js/bootstrap.min.js"></script>
 
   </body>
