attempted fix to collapse happening on any click, even when already selected

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,11 +18,11 @@
       <span id='hoverGuideCoordinates'></span>
       <br>
       <div class='btn-group' data-toggle='buttons'>
-        <label class='btn btn-primary btn-xs active' data-toggle='collapse' href='#moveToolOptions'>
-          <input type='radio' name='options' id='moveTool' autocomplete='off' checked> Move
+        <label class='btn btn-primary btn-xs active'>
+          <input type='radio' name='options' id='moveTool' autocomplete='off' data-toggle='collapse' href='#moveToolOptions' checked> Move
         </label>
         <label class='btn btn-primary btn-xs' data-toggle='collapse' href='#selectToolOptions'>
-          <input type='radio' name='options' id='selectTool' autocomplete='off'> Select
+          <input type='radio' name='options' id='selectTool' autocomplete='off' data-toggle='collapse' href='#moveToolOptions'> Select
         </label>
       </div>
       <br>
