--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,15 +18,15 @@
       <span id='hoverGuideCoordinates'></span>
       <br>
       <div class='btn-group' data-toggle='buttons'>
-        <label class='btn btn-primary btn-xs active'>
-          <input type='radio' name='options' id='moveTool' autocomplete='off' data-toggle='collapse' href='#moveToolOptions' checked> Move
+        <label class='btn btn-primary btn-xs active' data-toggle='collapse' data-target='.moveToolOptions:not(.in),.selectToolOptions.in'>
+          <input type='radio' name='options' id='moveTool' autocomplete='off' checked> Move
         </label>
-        <label class='btn btn-primary btn-xs' data-toggle='collapse' href='#selectToolOptions'>
-          <input type='radio' name='options' id='selectTool' autocomplete='off' data-toggle='collapse' href='#moveToolOptions'> Select
+        <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.moveToolOptions.in,.selectToolOptions:not(.in)'>
+          <input type='radio' name='options' id='selectTool' autocomplete='off' > Select
         </label>
       </div>
       <br>
-      <div id='moveToolOptions' class='collapse'>
+      <div class='moveToolOptions collapse in'>
         Scan Level:
         <select id='scanWhileMoving'>
           <option value='0'>None</option>
@@ -34,7 +34,7 @@
           <option value='2'>Big</option>
         </select>
       </div>
-      <div id='selectToolOptions' class='collapse'>
+      <div class='selectToolOptions collapse'>
         X: <input type='number' id='selectStartX'>
         Y: <input type='number' id='selectStartY'>
         Z: <input type='number' id='selectStartZ'>
