--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,8 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8'>
-    <title>Roboserver!</title>
+    <!--<title>Roboserver!</title>-->
+    <title>django/view/error.template</title>
     <script src='/js/socket.io.js'></script>
     <link rel='stylesheet' href='/css/style.css'>
     <link rel='stylesheet' href='/css/bootstrap.min.css'>
@@ -48,9 +49,10 @@
     <script type='text/javascript' src='/js/interface.js'></script>
 
     <script src='/js/three.js-master/build/three.js'></script>
-		<!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r81/three.min.js'></script> -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r81/three.min.js'></script> 
 		<script src='/js/PointerLockControls.js'></script>
-		<script src='/js/voxelMap.js'></script>
+		<script src='/js/VoxelMap.js'></script>
+		<script src='/js/CoordForm.js'></script>
 		<script src='/js/map.js'></script>
 		<script src='/js/buttons.js'></script>
 		<script src='/js/jquery-3.1.1.min.js'></script>
