select related rendering all fixed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,8 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8'>
-    <!--<title>Roboserver!</title>-->
-    <title>django/view/error.template</title>
+    <title>Roboserver!</title>
+    <!--<title>django/view/error.template</title>-->
     <script src='/js/socket.io.js'></script>
     <link rel='stylesheet' href='/css/style.css'>
     <link rel='stylesheet' href='/css/bootstrap.min.css'>
@@ -49,7 +49,7 @@
     <script type='text/javascript' src='/js/interface.js'></script>
 
     <script src='/js/three.js-master/build/three.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r81/three.min.js'></script> 
+    <!--<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r81/three.min.js'></script> -->
 		<script src='/js/PointerLockControls.js'></script>
 		<script src='/js/VoxelMap.js'></script>
 		<script src='/js/CoordForm.js'></script>
