fixed selection not being redrawn on coordinate input change

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
         Scan Level:
         <select id='scanWhileMoving'>
           <option value='0'>None</option>
-          <option value='1'>Small</option>
+          <option value='1' selected>Small</option>
           <option value='2'>Big</option>
         </select>
       </div>
