--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,3 +60,19 @@ input {
 input[type=number] {
   width:50px;
 }
+
+td {
+  height: 40px;
+  width: 40px;
+  border: 1px solid;
+  border-color: #424242;
+  color: white;
+  background-color: #A3A3A3;
+  user-select: none;
+}
+td[data-selected=true] {
+  border-color: lime;
+}
+td:hover {
+  background-color: #C3C3C3;
+}
