--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,8 @@
         Z: <input type='number' id='selectEndZ'>
       </div>
     </div>
+    
+    <div id='inventoryContainer'></div>
 
     <script src='/js/three.js-master/build/three.js'></script>
     <!--<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r81/three.min.js'></script> -->
