added external inventory scanning and transfer validation

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,6 +67,11 @@ input[type=number] {
   width:50px;
 }
 
+table {
+  display: inline-block;
+  padding: 1px;
+}
+
 td {
   height: 40px;
   width: 40px;
