started adding inspect button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,9 @@
         <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.digToolOptions.in'>
           <input type='radio' name='options' id='interactTool' autocomplete='off' > Interact
         </label>
+        <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.digToolOptions.in'>
+          <input type='radio' name='options' id='inspectTool' autocomplete='off' > Inspect
+        </label>
         <label class='btn btn-primary btn-xs' data-toggle='collapse' data-target='.digToolOptions:not(.in)'>
           <input type='radio' name='options' id='digTool' autocomplete='off' > Dig
         </label>
