--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,6 +73,7 @@
 		<script src='/js/map.js'></script>
 
     <script type='text/javascript' src='/js/fetchPromise.js'></script>
+    <script type='text/javascript' src='/js/recipeSearch.js'></script>
     <script type='text/javascript' src='/js/interface.js'></script>
 		<script src='/js/buttons.js'></script>
 
