username now displayed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,6 @@
   <head>
     <meta charset='UTF-8'>
     <title>Roboserver!</title>
-    <!--<title>django/view/error.template</title>-->
     <link rel='stylesheet' href='/css/style.css'>
     <link rel='stylesheet' href='/css/bootstrap.min.css'>
     <link rel='stylesheet' href='/css/bootstrap-select.min.css'>
@@ -16,6 +15,7 @@
     </div>
 
     <div id='buttonContainer'>
+      <span><%= user.username %></span>
       <span id='hoverGuideCoordinates'></span>
       <br>
       <div>
