robot selector added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,10 @@
           <option value='2'>Big</option>
         </select>
       </div>
+      <div>
+        Selected Robot:
+        <select id='robotSelect'></select>
+      </div>
       <div class='btn-group' data-toggle='buttons'>
         <label class='btn btn-primary btn-xs active' data-toggle='collapse' data-target='.digToolOptions.in'>
           <input type='radio' name='options' id='moveTool' autocomplete='off' checked> Move
