bugfixes, power level display added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
 
     <div id='buttonContainer'>
       <span><%= user.username %></span>
+      <span id='powerLevel'></span>
       <span id='hoverGuideCoordinates'></span>
       <br>
       <div>
